# role-playing-robots

./: .gitignore  CMakeLists.txt  README.md  RPR_OBS.json  package.xml  requirements.txt
data-analysis/: rp-data-analysis.Rmd  rpr_anonymized_data.csv
launch/: rprobots.launch
src/: setup.py
src/qtwizard/: rpwizard.ui  rpwizard_ui.py  wizardcontrol.py
src/rprobots/: main.py  obs_websocket.py  server.py
