<?xml version="1.0" encoding="UTF-8"?>
<package>
	<name>role_playing_robots</name>
	<version>1.0</version>
	<description>Interface for the Role-Playing with Robot Characters study/description>

	
	<maintainer email="spencerng@uchicago.edu">Spencer Ng</maintainer>
	<maintainer email="sarahsebo@uchicago.edu">Sarah Sebo</maintainer>
		
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>rospy</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>message_runtime</run_depend>
    <run_depend>anki_vector_ros</run_depend>
	<run_depend>misty_ros</run_depend>
    <run_depend>ros_vosk</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>std_msgs</run_depend>

</package>
